gcc/testsuite/g++.dg/parse/enum3.C
// PR c++/28261

struct A {}; // { dg-error "A::A" }

A::A (enum { e }) {} // { dg-error "defined|prototype" }
